force-app/main/default/objects/Truck_Destination__c/fields/Partner_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Partner_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Notification Sent</label>
    <type>Checkbox</type>
</CustomField>