force-app/main/default/objects/Truck_Destination__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <label>Trip</label>
    <referenceTo>Truck_Trip__c</referenceTo>
    <relationshipLabel>Destinations</relationshipLabel>
    <relationshipName>Destinations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>